--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@vueuse/core": "^4.10.0",
     "axios": "^0.21.1",
-    "echarts": "^5.2.2",
+    "echarts": "^5.3.1",
     "element-plus": "^1.0.2-beta.48",
     "eslint-plugin-vue": "^8.2.0",
+    "file-saver": "^2.0.5",
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -21,27 +22,17 @@
     "vue": "^3.1.2",
     "vue-i18n": "^9.1.6",
     "vue-router": "4",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "xlsx": "^0.18.0"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
     "sass": "^1.32.12",
+    "script-loader": "^0.7.2",
     "vite": "2.3.7",
     "vite-plugin-mock": "2.8.0",
     "vue-tsc": "^0.0.24"
-  },
-  "description": "",
-  "main": "mockProdServer.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sxwxw/lab_admin.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sxwxw/lab_admin/issues"
-  },
-  "homepage": "https://github.com/sxwxw/lab_admin#readme"
+  }
 }
